--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@fullcalendar/interaction": "^6.1.19",
         "@fullcalendar/timegrid": "^6.1.19",
         "fullcalendar": "^6.1.19",
+        "lucide": "^0.542.0",
         "tw-animate-css": "^1.3.7"
     }
 }
