--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fullcalendar/daygrid": "^6.1.19",
         "@fullcalendar/interaction": "^6.1.19",
         "@fullcalendar/timegrid": "^6.1.19",
+        "chart.js": "^4.5.0",
         "fullcalendar": "^6.1.19",
         "lucide": "^0.542.0",
         "tw-animate-css": "^1.3.7"
