--- a/.env.example
+++ b/.env.example
@@ -47,14 +47,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=dhafaalvaro15@gmail.com
-MAIL_PASSWORD=lkxvbjbyxrbabtip
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=dhafaalvaro15@gmail.com
-MAIL_FROM_NAME="${APP_NAME}"
+// MAIL_// MAILER=smtp
+// MAIL_HOST=smtp.gmail.com
+// MAIL_PORT=587
+// MAIL_USERNAME=dhafaalvaro15@gmail.com
+// MAIL_PASSWORD=lkxvbjbyxrbabtip
+// MAIL_ENCRYPTION=tls
+// MAIL_FROM_ADDRESS=dhafaalvaro15@gmail.com
+// MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -65,3 +65,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 FORGOT_CHECKOUT_GRACE_HOURS=6
+
+
